--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = "^2.10.6"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
 alembic = "^1.15.1"
 pydantic-settings = "^2.8.1"
+uvicorn = "^0.34.0"
 
 
 [tool.ruff]
